@@ -1,4 +1,5 @@
 v1.1.4-SNAPSHOT (2016-06-05):
+- changed to https
 - changed addon debugging info to kodi debugging info
 
 v1.1.3 (2016-05-22)
